second iteration - hardcoded on java, python syncs sdk